--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
   <div>
     <h1>My Web App</h1>
+    <button type="button" id="btn1">boton</button>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
